  - Fixed dock indicators sometimes not appearing on Windows (#103)
  - Fixed Flag_NativeTitleBar not working
  - Fixed drag offset when dragging too fast with mouse
  - Fixed bug where last tab index position wouldn't be remembered in case user
    had manually reordered tabs (#154)
  - Fixed crash when hosting a QQuickWidget (#150)

* v1.2.1 (unreleased)
  - Support for resizing dock widgets when they are in overlay/popup mode (autohide/sidebar feature)
  - Fixed title bar close button enabled state not being restored with Layout saver (#137)
  - Installs a version header (kddockwidgets_version.h) that defines a version string and other useful versioning macros (#138)
  - DockWidgetBase::eventFilter() is protected instead of private (regression vs v1.1) (#148)
    It's recommended that you rebuild your application when updating KDDW, as MSVC encodes private/protected in the name mangling.

* v1.2.0 (17 December 2020)
  - Wayland support
  - Added Flag_KeepAboveIfNotUtilityWindow, so you can have keep above even if
    floating window is shown in the task-bar.
  - Added DockWidget::windowActiveAboutToChange() signal
  - Added support for Qt6 (PySide6 support is lacking)
  - Added WASM support

* v1.1.1 (11 December 2020)
  - Windows: Fixed a crash when clicking on the close button for floating windows in some situations (#110)
  - Don't show dock/undock icon when dockwidget is not dockable (#99)

* v1.1.0 (26 October 2020)
  - New drop indicator style type: Segmented Indicators
  - Windows: Drop Shadow for floating windows
  - Added AutoHide / SideBar support
  - Added FocusScope support
  - Added DockWidget::isFocused() and DockWidgetBase::isFocusedChanged()
  - Added Config::Flag_AlwaysTitleBarWhenFloating, which complements Flag_HideTitleBarWhenTabsVisible
  - Added Config::Flag_DontUseUtilityWindowsForFloating
  - Added Config::Flag_TitleBarHasMinimizeButton
  - Added Config::Flag_TitleBarNoFloatButton
  - Added Config::Flag_AutoHideSupport